# basic-platformer-game

./: CMakeLists.txt  README.md  animate.c  animate.h  blit.c  blit.h  defs.h  init.c  init.h  main.c  main.h  processInput.c  processInput.h  render.c  render.h  setup.c  setup.h  structs.h  update.c  update.h  util.c  util.h
